tests/baselines/reference/project/jsFileCompilationSameNameFilesSpecifiedWithAllowJs/amd/jsFileCompilationSameNameFilesSpecifiedWithAllowJs.errors.txt
SameNameTsSpecifiedWithAllowJs/tsconfig.json(2,3): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
SameNameTsSpecifiedWithAllowJs/tsconfig.json(2,3): error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== SameNameTsSpecifiedWithAllowJs/tsconfig.json (2 errors) ====
    {
      "compilerOptions": { "allowJs": true },
      ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
      ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
      "files": [ "a.ts" ]
    }
==== SameNameTsSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;